--- a/app/src/main/res/layout/activity_calculo.xml
+++ b/app/src/main/res/layout/activity_calculo.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/nube2"
+
 
     tools:context=".CalculoActivity">
 
@@ -12,89 +14,103 @@
         android:id="@+id/h1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:fontFamily="monospace"
+        android:hint="Inicio TSV"
         android:text=""
-        android:textColor="@color/black"
-        android:textSize="20sp"
         android:textAlignment="gravity"
+        android:textColor="@color/black"
+        android:textSize="34sp"
+        android:radius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
+        app:layout_constraintVertical_bias="0.223" />
 
     <Button
         android:id="@+id/dia8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="246dp"
+        android:layout_height="48dp"
+        android:background="@drawable/custom_botton"
         android:onClick="primero"
         android:text="Hora de Presentación"
-        android:textAlignment="gravity"
-        android:textColor="#000000"
+        android:textAlignment="center"
+        android:textColor="#F4F1F1"
         android:textSize="14sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.171" />
+        app:layout_constraintVertical_bias="0.127" />
 
     <TextView
         android:id="@+id/h2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="206dp"
+        android:layout_height="57dp"
+        android:background="@color/white"
+        android:fontFamily="monospace"
+        android:hint="Fin TSV"
         android:text=""
-        android:textAlignment="gravity"
-        android:textSize="20sp"
+        android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.265" />
+        app:layout_constraintVertical_bias="0.409" />
 
     <Button
         android:id="@+id/dia9"
-        android:layout_width="224dp"
+        android:layout_width="239dp"
         android:layout_height="48dp"
+        android:background="@drawable/custom_botton"
         android:onClick="segundo"
         android:text="Hora de Finalización"
         android:textAlignment="gravity"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.351" />
+        app:layout_constraintVertical_bias="0.314" />
 
     <TextView
         android:id="@+id/res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:text=""
-        android:textSize="20sp"
-        android:textAlignment="gravity"
+        android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="29sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.452" />
+        app:layout_constraintVertical_bias="0.546" />
 
     <TextView
         android:id="@+id/nuevoEtd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:text=""
-        android:textSize="20sp"
-        android:textAlignment="gravity"
+        android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="31sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.536" />
+        app:layout_constraintVertical_bias="0.69" />
 </androidx.constraintlayout.widget.ConstraintLayout>
